2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-11-19  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* xau.pc.in:
	Update pkgconfig files to separate library build-time dependencies
	from application build-time dependencies.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.

2005-10-11  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Makefile.am: 
	* configure.ac:
	Use sed to put version number in man page
	Add shadow man pages for man pages that document multiple functions.
	
2005-09-21  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Set needed flags for MT-safe API's called from libXau

2005-07-08  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* include/.cvsignore:
	Add .cvsignore files
